backend/tests/snapshots/games__create_game.snap
---
source: tests/games.rs
expression: body
---
{
  "awayScore": 0,
  "cancelled": false,
  "createdAt": "[timestamp]",
  "dateTime": "[dateTime]",
  "homeAway": "home",
  "homeScore": 0,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test"
}
