backend/tests/snapshots/games__get_game.snap
---
source: tests/games.rs
expression: body
---
{
  "awayScore": 0,
  "createdAt": "[timestamp]",
  "dateTime": "[dateTime]",
  "events": [],
  "homeAway": "home",
  "homeScore": 0,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test",
  "status": "scheduled"
}
