backend/tests/snapshots/games__update_game.snap
---
source: tests/games.rs
expression: body
---
{
  "awayScore": 1,
  "cancelled": false,
  "createdAt": "[timestamp]",
  "dateTime": "[dateTime]",
  "homeAway": "home",
  "homeScore": 3,
  "id": "[uuid]",
  "location": "Stadium",
  "opponent": "FC Test",
  "status": "scheduled",
  "updatedAt": "[timestamp]",
  "version": 1
}
